Doc : - Ajout de tags pour toutes les routes API. - Passage en anglais de la description générale de l'API et de la route login_check.
